src/objects/CVMA_Event_RSVP__c/CVMA_Event_RSVP__c.object-meta.xml
<CustomObject>
    <description>Track RSVP responses for CVMA events including member response status and timestamps</description>
    <label>CVMA Event RSVP</label>
    <nameField>
        <displayFormat>RSVP-{00000}</displayFormat>
        <label>RSVP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CVMA Event RSVPs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>