src/objects/CVMA_Event_RSVP__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Campaign (used as Event) for which the RSVP is being made</description>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>RSVPs</relationshipLabel>
    <relationshipName>Event_RSVPs</relationshipName>
    <type>Lookup</type>
</CustomField>