src/objects/CVMA_Event_RSVP__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the CVMA member making the RSVP</description>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event RSVPs</relationshipLabel>
    <relationshipName>Event_RSVPs</relationshipName>
    <type>Lookup</type>
</CustomField>