src/objects/CVMA_Event_RSVP__c/fields/Plus_One__c.field-meta.xml
<CustomField>
    <fullName>Plus_One__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the member is bringing a guest (+1)</description>
    <label>Plus One</label>
    <type>Checkbox</type>
</CustomField>