src/objects/CVMA_Event_RSVP__c/fields/Plus_One_Name__c.field-meta.xml
<CustomField>
    <fullName>Plus_One_Name__c</fullName>
    <description>Name of the guest if bringing a plus one</description>
    <label>Plus One Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>