src/objects/CVMA_Event_RSVP__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Member&apos;s RSVP response to the event</description>
    <label>Response</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Yes - I&apos;ll be there</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>No - Can&apos;t make it</label>
            </value>
            <value>
                <fullName>Maybe</fullName>
                <label>Maybe - Not sure yet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>