src/objects/CVMA_Event_RSVP__c/fields/RSVP_Date__c.field-meta.xml
<CustomField>
    <fullName>RSVP_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time when the RSVP was submitted or last updated</description>
    <label>RSVP Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>